# test_utils

./: .djlint_rules.yaml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  __init__.py  pyproject.toml  pytest.ini
.github/: validate_javascript_dependencies.py
.github/actions/diff_print_format/: action.yml
.github/actions/track_overrides/: action.yml
.github/actions/track_overrides/src/: track_overrides.py
.github/actions/translate_docs/: action.yml
.github/actions/translate_docs/src/: translate_docs.py
.github/workflows/: build.yaml  code-duplication.yml  frappe-cloud-publish.yaml  pre-commit.yaml  release.yaml  static-analysis.yml
actions/code_duplication/: action.yml
actions/diff_print_format/: action.yml
actions/frappe_cloud_publish/: action.yml  publish_marketplace_release.py
actions/generate_changelog/: README.md  action.yml  default-changelog-prompt.txt  default-prompt.txt  generate_changelog.py  retrospective.py  run_changelogs.sh
actions/generate_changelog/docs/: release-integration.md
actions/sql_registry/: action.yml
actions/src/: track_overrides.py  translate_docs.py
actions/track_overrides/: action.yml  track_overrides.py
actions/track_overrides/src/: track_overrides.py
actions/translate_docs/: action.yml
actions/translate_docs/src/: translate_docs.py
docs/: code_duplication.md  frappe_cloud_publish.md  index.md  move_to_poetry.md  partitions.md  pre_commit_hooks.md  pre_commit_migration_plan.md  printers.md  sql_registry.md  static_analysis.md  validate_customizations.md  validate_doctype_python_types.md
docs/actions/: code-duplication.md  diff_print_format.md  generate_changelog.md  track_overrides.md  translate_docs.md
pre-commit/: clean_customized_doctypes.py  validate_copyright.py  validate_python_dependencies.py
test_utils/: __init__.py
test_utils-0.1.0.dist-info/: METADATA  RECORD  top_level.txt
test_utils/fixtures/: addresses.json  bank_accounts.json  banks.json  boms.json  company.json  contacts.json  customers.json  employees.json  farm_coa.json  holiday_lists.json  ifrs_coa.json  item_groups.json  items.json  mode_of_payments.json  operations.json  payment_terms_templates.json  supplier_groups.json  suppliers.json  users.json  workstations.json
test_utils/pre_commit/: add_translations.py  bylines.py  check_code_duplication.py  clean_customized_doctypes.py  filter_coverage.py  lint_markdown.py  patch_linters.py  semgrep_fmt.py  sql_formatter.py  sql_registration.py  sql_rewriter_functions.py  static_analysis.py  track_overrides.py  update_pre_commit_config.py  validate_copyright.py  validate_customizations.py  validate_doctype_python_types.py  validate_frappe_dependencies.py  validate_frappe_project.py  validate_javascript_dependencies.py  validate_mermaid.py  validate_patches.py  validate_python_dependencies.py
test_utils/printers/: __init__.py  cli.py
test_utils/printers/ipp/: __init__.py  codec.py
test_utils/printers/mocks/: __init__.py  _sync.py  ipp.py  raw.py
test_utils/utils/: chart_of_accounts.py  conftest.py  create_partition.py  custom_fields.py  customize.py  mysqldump_wrapper.sh  offline_migrate.py  restore_partitions.py  setup_fixtures.py  sql_pipeline.py  sql_registry.py  track_overrides.py
test_utils/utils/graph/: __init__.py  builder.py  cli.py  constants.py  interactive_export.py  js_callsites.py  path_excludes.py  plots.py  python_calls.py  python_extract.py  python_imports.py  queries.py  schema.py
test_utils/utils/sql_registry/: __init__.py  cli.py  converter.py  models.py  registry.py  scanner.py
test_utils/utils/static_analysis/: __init__.py  frontend_validator.py  hooks_validator.py  jinja_validator.py  orphan_detector.py  patches_validator.py  path_resolver.py  python_call_validator.py  report_validator.py
tests/: __init__.py  test_graph_js_callsites.py  test_validate_mermaid.py
tests/fixtures/: mermaid_invalid.md
tests/printers/: test_cli.py  test_ipp_codec.py  test_ipp_mock.py  test_raw_mock.py
utils/: conftest.py  customize.py
