[project]
name = "test_utils"
description = "AgriTheory Test Utilities and Fixtures"
authors = [
    { name = "AgriTheory", email = "support@agritheory.dev"}
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "version"]

[project.scripts]
clean_customized_doctypes = "test_utils.pre_commit.clean_customized_doctypes:main"
create_partition = "test_utils.utils.create_partition:create_partition"
track_overrides = "test_utils.pre_commit.track_overrides:main"
update_pre_commit_config = "test_utils.pre_commit.update_pre_commit_config:main"
validate_copyright = "test_utils.pre_commit.validate_copyright:main"
validate_customizations = "test_utils.pre_commit.validate_customizations:main"
validate_javascript_dependencies = "test_utils.pre_commit.validate_javascript_dependencies:main"
validate_python_dependencies = "test_utils.pre_commit.validate_python_dependencies:main"
add_translations = "test_utils.pre_commit.add_translations:main"
bylines = "test_utils.pre_commit.bylines:main"
patch_linters = "test_utils.pre_commit.patch_linters:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "1.9.0"
packages = [{include = "test_utils"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
mypy = "^1.15.0"
toml = "^0.10.2"
requests = "^2.32.3"

[tool.codespell]
skip = "CHANGELOG.md"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variable = ["__init__.py:__version__"]